fixed header styling on mobile issue

--- a/client/src/pages/Auth/style.css
+++ b/client/src/pages/Auth/style.css
@@ -287,3 +287,14 @@ input#confirmPassword.form-control {
   max-height: 100%;
   height: 780px;
 }
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: 0.8em !important;
+  }
+}
